# oakley-grocery

./: .env.example  README.md  SKILL.md  pyproject.toml
oakley_grocery/: cart.py  cli.py  db.py  lists.py  woolworths.py
oakley_grocery.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
oakley_grocery/common/: __init__.py  config.py  formatting.py
tests/: test_danmurphys.py  test_db.py  test_formatting.py  test_lists.py  test_memory.py  test_resolver.py  test_woolworths.py
